--- a/src/components/page/appsco-page-config-dropdown.html
+++ b/src/components/page/appsco-page-config-dropdown.html
@@ -1,13 +1,15 @@
 <link rel="import" href="../../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../../bower_components/iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../../../bower_components/paper-card/paper-card.html">
-
 <link rel="import" href="../../../bower_components/paper-dropdown-menu/paper-dropdown-menu.html">
+<link rel="import" href="../../../bower_components/paper-listbox/paper-listbox.html">
+<link rel="import" href="../../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../../bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../../bower_components/iron-ajax/iron-request.html">
 
 <link rel="import" href="../header/appsco-dropdown.html">
+<link rel="import" href="../components/appsco-loader.html">
 
 <dom-module id="appsco-page-config-dropdown">
     <template>
@@ -39,7 +41,13 @@
                 font-size: 16px;
             }
 
+            :host paper-toggle-button {
+                cursor: pointer;
+            }
+
             :host paper-dropdown-menu {
+                width: 100%;
+
                 --paper-input-container-underline: {
                     display: none;
                 };
@@ -67,17 +75,7 @@
                 width: 100%;
                 background-color: white;
             }
-
-            :host .dropdown-action {
-                width: 100%;
-                padding: 0;
-                margin: 0;
-                border-radius: 0;
-                background-color: transparent;
-                font-size: 12px;
-                border: none;
-            }
-
+            
             .input-container-show-resource-section paper-dropdown-menu {
                 width: 100%;
             }
@@ -85,10 +83,6 @@
             .input-container-show-resource-section {
                 margin-top: 30px;
                 margin-bottom: 10px;
-            }
-
-            :host #dropDownPageDisplay {
-                width: 100%;
             }
         </style>
 
@@ -101,39 +95,58 @@
                 <div class="card-content">
                     <h1>Page settings</h1>
 
+                    <appsco-loader active="[[ _loader ]]"
+                                   loader-alt="AppsCo is processing request"
+                                   multi-color></appsco-loader>
 
-                        <div class="input-container input-container-show-resource-section">
-                            <paper-toggle-button id="hideResourceSectionToggle"
-                                                 on-tap="saveChanges"
-                                                 checked$="[[ _hideResourceSection ]]">Hide groups section
-                            </paper-toggle-button>
-                            <p class="info">
-                                Resource section will not be displayed by default when this option is turned on.
-                            </p>
-                        </div>
+                    <div class="input-container input-container-show-resource-section">
+                        <paper-toggle-button id="hideResourceSectionToggle"
+                                             on-tap="_onSaveChanges"
+                                             checked$="[[ _hideResourceSection ]]">Hide groups section
+                        </paper-toggle-button>
+                        <p class="info">
+                            Resource section will not be displayed by default when this option is turned on.
+                        </p>
+                    </div>
 
-                        <div class="input-container">
-                            <paper-dropdown-menu id="dropDownPageDisplay"
-                                                 label="Resources view"
-                                                 horizontal-align="left"
-                                                 value="[[ _displayKind ]]"
+                    <div class="input-container">
+                        <paper-dropdown-menu id="dropDownPageDisplay"
+                                             label="Resources view"
+                                             horizontal-align="left"
+                                             value="[[ _displayKind ]]"
+                        >
+                            <paper-listbox id="paperListboxPageDisplay"
+                                           class="dropdown-content filter"
+                                           attr-for-selected="value"
+                                           selected="[[ _displayKind ]]"
                             >
-                                <paper-listbox id="paperListboxPageDisplay"
-                                               class="dropdown-content filter"
-                                               attr-for-selected="value"
-                                               selected="[[ _displayKind ]]"
-                                >
-                                    <template is="dom-repeat" items="[[ _displayKindList ]]">
-                                        <paper-item value="[[ item.value ]]" on-tap="saveChanges">[[ item.name ]]</paper-item>
-                                    </template>
-                                </paper-listbox>
-                            </paper-dropdown-menu>
-                            <p class="info">
-                                Choose how the resources card will be displayed on the page.
-                            </p>
-                        </div>
+                                <template is="dom-repeat" items="[[ _displayKindList ]]">
+                                    <paper-item value="[[ item.value ]]" on-tap="_onSaveChanges">[[ item.name ]]</paper-item>
+                                </template>
+                            </paper-listbox>
+                        </paper-dropdown-menu>
+                        <p class="info">
+                            Choose how the resources card will be displayed on the page.
+                        </p>
+                    </div>
 
-
+                    <div class="input-container">
+                        <paper-dropdown-menu id="dropDownSortOptions"
+                                             label="Sort resources by"
+                                             horizontal-align="left">
+                            <paper-listbox id="paperListboxSortOptions"
+                                           class="dropdown-content filter"
+                                           attr-for-selected="value"
+                                           selected="[[ _sortOption ]]">
+                                <template is="dom-repeat" items="[[ _sortOptionList ]]">
+                                    <paper-item value="[[ item.value ]]"
+                                                sort-field="[[ item.sortField ]]"
+                                                sort-ascending="[[ item.sortAscending ]]"
+                                                on-tap="_onSaveChanges">[[ item.name ]]</paper-item>
+                                </template>
+                            </paper-listbox>
+                        </paper-dropdown-menu>
+                    </div>
                 </div>
             </paper-card>
         </appsco-dropdown>
@@ -147,9 +160,26 @@
 
             properties: {
 
+                authorizationToken: {
+                    type: String,
+                    value: ''
+                },
+
+                pageConfigApi: {
+                    type: String,
+                    value: ''
+                },
+
                 page: {
                     type: String,
                     value: ''
+                },
+
+                pageConfig: {
+                    type: Object,
+                    value: function() {
+                        return {};
+                    }
                 },
 
                 _displayKindList: {
@@ -162,12 +192,54 @@
                     }
                 },
 
+                _sortOptionList: {
+                    type: Array,
+                    value: function() {
+                        return [
+                            {
+                                value: 'created1',
+                                name: 'Newest to oldest',
+                                sortField: 'created',
+                                sortAscending: '1'
+                            },
+                            {
+                                value: 'created0',
+                                name: 'Oldest to newest',
+                                sortField: 'created',
+                                sortAscending: '0'
+                            },
+                            {
+                                value: 'title1',
+                                name: 'A to Z',
+                                sortField: 'title',
+                                sortAscending: '1'
+                            },
+                            {
+                                value: 'title0',
+                                name: 'Z to A',
+                                sortField: 'title',
+                                sortAscending: '0'
+                            }
+                        ];
+                    }
+                },
+
                 /**
                  * DOM element which triggers the dropdown.
                  */
                 _triggerDropdown: {
                     type: Object,
                     notify: true
+                },
+
+                _loader: {
+                    type: Boolean,
+                    value: false
+                },
+
+                _headers: {
+                    type: Object,
+                    computed: '_computeHeaders(authorizationToken)'
                 },
 
                 _hideResourceSection: {
@@ -180,9 +252,9 @@
                     computed: '_computeDisplayKind(pageConfig, page)'
                 },
 
-                pageConfig: {
-                    type: Object,
-                    value: function() { return {} }
+                _sortOption: {
+                    type: String,
+                    computed: '_computeSortOption(pageConfig, page)'
                 }
             },
 
@@ -195,19 +267,11 @@
                 this.$.pageSettingsDropdown.toggle();
             },
 
-            saveChanges: function(evt) {
-                setTimeout(function() {
-                    var displayKind = this.$.dropDownPageDisplay.selectedItem.value,
-                        hideResourceSection = this.$.hideResourceSectionToggle.checked;
-
-                    this.fire('page-settings-changed', {
-                        page: this.page,
-                        settings: {
-                            display_style: displayKind,
-                            hide_resource_section: hideResourceSection
-                        }
-                    });
-                }.bind(this), 200);
+            _computeHeaders: function (authorizationToken) {
+                return {
+                    'Authorization': 'token ' + authorizationToken,
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                }
             },
 
             _computeHideResourceSection: function(pageConfig, page) {
@@ -216,6 +280,70 @@
 
             _computeDisplayKind: function(pageConfig, page) {
                 return pageConfig[page] ? pageConfig[page].display_style : 'list';
+            },
+
+            _computeSortOption: function(pageConfig, page) {
+                return pageConfig[page] ?
+                    (pageConfig[page].sort_field + pageConfig[page].sort_ascending) :
+                    (this._sortOptionList ? this._sortOptionList[2].value : '');
+            },
+
+            _showLoader: function() {
+                this._loader = true;
+            },
+
+            _hideLoader: function() {
+                this._loader = false;
+            },
+
+            _saveChanges: function(settings) {
+                var request = document.createElement('iron-request'),
+                    options = {
+                        url: this.pageConfigApi,
+                        method: 'PUT',
+                        handleAs: 'json',
+                        headers: this._headers
+                    },
+                    body = 'page_config[page]=' + this.page;
+
+                for (var key in settings) {
+                    body += ('&page_config[' + key +']=' +
+                    (('boolean' === typeof settings[key]) ?
+                        (settings[key] ? 1 : 0) :
+                        settings[key]));
+                }
+
+                options.body = body;
+
+                request.send(options).then(function(request) {
+
+                    if (200 === request.status) {
+                        var pageConfig = request.response;
+
+                        this.set('pageConfig', pageConfig);
+                        this.fire('page-settings-changed', {
+                            page: this.page,
+                            pageConfig: pageConfig
+                        });
+
+                        this._hideLoader();
+                    }
+                }.bind(this));
+            },
+
+            _onSaveChanges: function() {
+
+                this._showLoader();
+
+                setTimeout(function() {
+
+                    this._saveChanges({
+                        sort_field: this.$.dropDownSortOptions.selectedItem.sortField,
+                        sort_ascending: this.$.dropDownSortOptions.selectedItem.sortAscending,
+                        display_style: this.$.dropDownPageDisplay.selectedItem.value,
+                        hide_resource_section: this.$.hideResourceSectionToggle.checked
+                    });
+                }.bind(this), 30);
             }
 
         });
